refactor: 영화 상세 페이지